Lots of work on the build script -- the tests now all compile. Abstracted some hardcoded values into settable properties (such as from Hudson). Added some logging. Fixed up the bootclasspath stuff (really hoping I got it this time!). Had to switch to 1.7 source because 1.8 tickles a compiler bug when compiling the tests